--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 		<div class="connect-box">
 			<h1 id="box">Connect</h1>
 			<a href="https://github.com/Pnickolas1">GitHub</a>
-			<i class="fa fa-github" style="font-size:36px"></i>
+			<a href="https://www.linkedin.com/in/peter-tountas-42173229?trk=hp-identity-name">LinkedIn</a>
+			<a href="http://stackoverflow.com/users/5640097/peter-tountas">StackOverFlow</a>
 
 
 
