--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,71 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
-	<header>Peter Tountas</header>
-	<h2>About</h2>
 	<title></title>
 </head>
 <body>
+
+	<div class="navbar">
+		<ul>
+			<li><a href="contact.html">Contact</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
+			<li><a href="index.html">Index</a></li>
+		</ul>
+		
+	</div>
+
+	<div class="absolute_name_bar" id="my_name ">
+		<h1>PETER TOUNTAS</h1>
+	</div>
+<div class="big-box">
+
+	<div class="box">
+
+		<div class="contact-me" id="contact">
+		<h1>Contact</h1>
+		</div>
+
+		<div class="contact-form">
+			<form>
+				<br>
+				<label for="Name">Name</label><br>
+				<input type="text" name="Name" placeholder="name"><br>
+				<br>
+
+				<label for="Email">Email</label><br>
+				<input type="text" mame="Email" placeholder="email"><br>
+				<br>
+
+	
+				<label for="Email">Message</label><br>
+					<textarea name="Message" cols="50" rows="20"></textarea>
+
+			</form>
+		</div>
+
+
+	</div>
+
+
+		<div class="connect-box">
+			<h1 id="box">Connect</h1>
+			<a href="https://github.com/Pnickolas1">GitHub</a>
+			<a href="https://www.linkedin.com/in/peter-tountas-42173229?trk=hp-identity-name">LinkedIn</a>
+			<a href="http://stackoverflow.com/users/5640097/peter-tountas">StackOverFlow</a>
+		</div>
+		
+
+
+
+		<div class="submitbox">
+			<form>
+			<input type="Submit" value="Submit">
+			</form>
+		</div>
+
+
+</div>
 
 </body>
 </html>
