--- a/contact.html
+++ b/contact.html
@@ -45,29 +45,35 @@
 		</div>
 
 
+		<div class="submitbox">
+		<form>
+		<input type="Submit" value="Submit">
+		</form>
+		</div>
+
+
+
+
+
+
 	</div>
 
-
-		<div class="connect-box">
-			<h1 id="box">Connect</h1>
-			<a href="https://github.com/Pnickolas1">GitHub</a>
-			<a href="https://www.linkedin.com/in/peter-tountas-42173229?trk=hp-identity-name">LinkedIn</a>
-			<a href="http://stackoverflow.com/users/5640097/peter-tountas">StackOverFlow</a>
-		</div>
+	<div class="connect-box">
+		<h1>Connect</h1>
+		<a href="https://github.com/Pnickolas1"><img src="assets/images/github.png" alt="GitHub" height="20%" width="20%"></a>
+		<a href="https://www.linkedin.com/in/peter-tountas-42173229?trk=hp-identity-name"><img src="assets/images/linkedin.png" alt="GitHub" height="20%" width="20%"></a>
+		<a href="http://stackoverflow.com/users/5640097/peter-tountas"><img src="assets/images/stackoverflow.png" alt="GitHub" height="20%" width="20%"></a>
+	</div>
 		
 
 
 
-		<div class="submitbox">
-			<form>
-			<input type="Submit" value="Submit">
-			</form>
-		</div>
 
 
 </div>
 
 </body>
 <footer>
- <p>Copyright: Peter Tountas</p></footer>
+ <p>Copyright: Peter Tountas</p>
+ </footer>
 </html>
