--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="navbar">
 		<ul>
 			<li><a href="contact.html">Contact</a></li>
-			<li><a href="potfolio.html">Portfolio</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
 			<li><a href="index.html">Index</a></li>
 		</ul>
 	
