--- a/portfolio.html
+++ b/portfolio.html
@@ -1,39 +1,56 @@
 <!DOCTYPE html>
+
+<!DOCTYPE html>
 <html>
 <head>
+
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<title></title>
 </head>
 <body>
-	<div>
+	<div class="navbar">
 		<ul>
 			<li><a href="contact.html">Contact</a></li>
 			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="index.html">Index</li>			
+			<li><a href="index.html">Index</a></li>
 		</ul>
-	</div>
 	
+	</div>
+
+
 	<div class="absolute_name_bar" id="my_name">
-			<h1>PETER TOUNTAS</h1>
+		<h1>PETER TOUNTAS</h1>
 	</div>
 
-<div class="big-box">
-	<h1>Portfolio</h1>
-</div>
-
-
+	<div class="big-box">
 		
-	<div class="connect-box">
-		<h1>Connect</h1>
-		<a href="https://github.com/Pnickolas1"><img src="assets/images/github.png" alt="GitHub" height="20%" width="20%"></a>
-		<a href="https://www.linkedin.com/in/peter-tountas-42173229?trk=hp-identity-name"><img src="assets/images/linkedin.png" alt="GitHub" height="20%" width="20%"></a>
-		<a href="http://stackoverflow.com/users/5640097/peter-tountas"><img src="assets/images/stackoverflow.png" alt="GitHub" height="20%" width="20%"></a>
+
+
+		<div class="box">
+			<h1 id="box">Portfolio</h1>
+			<div class="imgHolder">
+			<img id="picture1" src="assets/images/randompic.jpeg"/>
+				
+			</div>	
+			<img id="jets" src="assets/images/download.jpeg"/>
+			<img id="image4" src="assets/images/image3.jpeg"/>
+			<img id="image5" src="assets/images/image4.jpeg"/>
+			
+
+		</div>
+	
+		<div class="connect-box">
+			<h1>Connect</h1>
+			<a href="https://github.com/Pnickolas1"><img src="assets/images/github.png" alt="GitHub" height="20%" width="20%"></a>
+			<a href="https://www.linkedin.com/in/peter-tountas-42173229?trk=hp-identity-name"><img src="assets/images/linkedin.png" alt="GitHub" height="20%" width="20%"></a>
+			<a href="http://stackoverflow.com/users/5640097/peter-tountas"><img src="assets/images/stackoverflow.png" alt="GitHub" height="20%" width="20%"></a>
+		</div>
 	</div>
 
-
-
+	<footer>
+	<div class="footer">
+ 	<p>Copyright: Peter Tountas</p>
+ 	</footer>
+	</div>
 </body>
 </html>
-
-
-<img src="smiley.gif" alt="Smiley face" height="42" width="42">
