--- a/portfolio.html
+++ b/portfolio.html
@@ -24,19 +24,20 @@
 
 	<div class="big-box">
 		
-
-
 		<div class="box">
 			<h1 id="box">Portfolio</h1>
 			<div class="imgHolder">
-			<img id="picture1" src="assets/images/randompic.jpeg"/>
-				
-			</div>	
-			<img id="jets" src="assets/images/download.jpeg"/>
+				<img id="picture1" src="assets/images/randompic.jpeg"/>
+				<p>Project 1</p>
+			</div>
+			
+			<div class="imgHolder">
+				<img id="jets" src="assets/images/download.jpeg"/>
+			</div>
+			
 			<img id="image4" src="assets/images/image3.jpeg"/>
 			<img id="image5" src="assets/images/image4.jpeg"/>
-			
-
+			<img id="image6" src="assets/images/jet.jpeg"/>
 		</div>
 	
 		<div class="connect-box">
