--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,6 @@
 
 <div class="big-box">
 		
-
-
-
-
 	<div class="box">
 			<h1>Portfolio</h1>
 
@@ -69,11 +65,9 @@
 
 </div>
 
-
-
 	<footer>
 	<div class="footer">
- 	<p>Copyright: Peter Tountas</p>
+ 	<p>Copyright 2016: Peter Tountas</p>
  	</footer>
 	</div>
 </body>
