--- a/contact.html
+++ b/contact.html
@@ -51,12 +51,6 @@
 		<input type="Submit" value="Submit">
 		</form>
 		</div>
-
-
-
-
-
-
 	</div>
 
 	<div class="connect-box">
@@ -66,15 +60,10 @@
 		<a href="http://stackoverflow.com/users/5640097/peter-tountas"><img src="assets/images/stackoverflow.png" alt="GitHub" height="20%" width="20%"></a>
 	</div>
 		
-
-
-
-
-
 </div>
 
 </body>
 <footer>
- <p>Copyright: Peter Tountas</p>
+ <p>Copyright 2016: Peter Tountas</p>
  </footer>
 </html>
