--- a/index.html
+++ b/index.html
@@ -45,14 +45,10 @@
 		<a href="http://stackoverflow.com/users/5640097/peter-tountas"><img src="assets/images/stackoverflow.png" alt="GitHub" height="20%" width="20%"></a>
 	</div>
 
-		
-
-
-
 	</div>
 
 	<footer>
- 	<p>Copyright: Peter Tountas</p>
+ 	<p>Copyright 2016: Peter Tountas</p>
  	</footer>
 
 </body>
